[#593] Enabled quick fixes and implemented corresponding tests